# cold-root-identity

./: .gitignore  LICENSE  README.md  cold_root_identity.py  pyproject.toml
.github/workflows/: tests.yml
coldroot/: __init__.py  cli.py  core.py  lineage.py  reference_api.py
docs/: Client_Adoption.md  Client_Pseudocode.md  SPEC.md  Scope.md  WoT_Intergration.md  client_integration.md  derivation_scheme.md  lineage_spec.md
examples/: demo_session.txt  lineage_2026Q1.json
go/: core.go  go.mod  vectors_test.go
js/: coldroot.js  package-lock.json  package.json  test_vectors.js
scripts/: generate_vectors.py
test_vectors/: hkdf_vectors.json
tests/: test_vectors.py
tests/vectors/: cold_root_identity.v1.json
